fixed signup whitespace and header underline

--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -6,15 +6,12 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  // background-color:var(--neutral);
-  // height: 100vh;
 }
 
 .welcomeMessage {
   margin: 3.8rem auto 2rem;
-  padding-top: 4rem;
+  padding: 4rem 2rem 0;
   font-size: 1.5rem;
-  border-top: 2px solid var(--dark2);
   width: 100vw;
   text-align: center;
   color: var(--black);
@@ -46,10 +43,16 @@
 }
 
 .bulletinHeader {
-  margin: 0.5rem auto 1rem;
+  margin: 0.5rem auto 0.5rem;
   color: var(--black);
   text-align: center;
-  width: 350px;
+  max-width: 350px;
+}
+
+@include tabletPortrait {
+  .bulletinHeader {
+    margin: 0.5rem auto 1rem;
+  }
 }
 
 .bulletinHeaderContainer {
@@ -57,17 +60,32 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 70px;
+  flex-direction: column-reverse;
+  height: 100px;
   padding: 0.5rem;
   position: relative;
 }
 
+@include tabletPortrait {
+  .bulletinHeaderContainer {
+    flex-direction: row;
+    height: 70px;
+  }
+}
+
 .legendContainer {
-  position: absolute;
+  position: static;
   left: 2rem;
   display: flex;
-  flex-direction: column;
-  padding-bottom: .5rem;
+  flex-direction: row;
+  padding-bottom: 0.5rem;
+}
+
+@include tabletPortrait {
+  .legendContainer {
+    position: absolute;
+    flex-direction: column;
+  }
 }
 
 .legendUnit {
@@ -75,6 +93,13 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  margin: 0 0.5rem;
+}
+
+@include tabletPortrait {
+  .legendUnit {
+    margin: 0;
+  }
 }
 
 .legendText {
@@ -101,9 +126,9 @@
 .bulletinContainer {
   border: 2px solid var(--black);
   width: 90%;
-  margin: 0 auto;
+  margin: 0 auto 4rem;
   height: 100%;
-  background-color:var(white);
+  background-color: var(white);
 }
 
 @include mobilePortrait {
