--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,9 +1,15 @@
 @import '../../styles/_variables';
 @import '../../styles/_breakpoints';
 
-.Header {
+.Header,
+.HeaderWithUnderline {
   width: 100%;
-  height: 50px;
+  height: 60px;
+  position: relative;
+}
+
+.HeaderWithUnderline {
+  border-bottom: 2px solid var(--dark2);
   position: fixed;
 }
 
